- fixes after review